--- a/answers/hw1/index.html
+++ b/answers/hw1/index.html
@@ -5,6 +5,135 @@
     <link rel="stylesheet" href="style.css"></link>
   </head>
   <body>
-    hw1 template
+  	<div class="cover">
+  	</div>
+    <div class="container">
+    	<div class="gamebox">
+    		<div class="gamevedio">
+    			<img src="./images/gamebase.jpg">
+    		</div>
+    		<div class="gameinfo">
+    			<div class="userphoto">
+    				<img src="./images/user_play.png" alt="">
+    			</div>
+    			<div class="userinfo">
+    				<p>頻道名稱</p>
+    				<p>實況主名字</p>
+    			</div>
+    		</div>
+    	</div>
+    	<div class="gamebox">
+    		<div class="gamevedio">
+    			<img src="./images/gamebase.jpg">
+    		</div>
+    		<div class="gameinfo">
+    			<div class="userphoto">
+    				<img src="./images/user_play.png" alt="">
+    			</div>
+    			<div class="userinfo">
+    				<p>頻道名稱</p>
+    				<p>實況主名字</p>
+    			</div>
+    		</div>
+    	</div>
+    	<div class="gamebox">
+    		<div class="gamevedio">
+    			<img src="./images/gamebase.jpg">
+    		</div>
+    		<div class="gameinfo">
+    			<div class="userphoto">
+    				<img src="./images/user_play.png" alt="">
+    			</div>
+    			<div class="userinfo">
+    				<p>頻道名稱</p>
+    				<p>實況主名字</p>
+    			</div>
+    		</div>
+    	</div>
+    	<div class="gamebox">
+    		<div class="gamevedio">
+    			<img src="./images/gamebase.jpg">
+    		</div>
+    		<div class="gameinfo">
+    			<div class="userphoto">
+    				<img src="./images/user_play.png" alt="">
+    			</div>
+    			<div class="userinfo">
+    				<p>頻道名稱</p>
+    				<p>實況主名字</p>
+    			</div>
+    		</div>
+    	</div>
+    	<div class="gamebox">
+    		<div class="gamevedio">
+    			<img src="./images/gamebase.jpg">
+    		</div>
+    		<div class="gameinfo">
+    			<div class="userphoto">
+    				<img src="./images/user_play.png" alt="">
+    			</div>
+    			<div class="userinfo">
+    				<p>頻道名稱</p>
+    				<p>實況主名字</p>
+    			</div>
+    		</div>
+    	</div>
+    	<div class="gamebox">
+    		<div class="gamevedio">
+    			<img src="./images/gamebase.jpg">
+    		</div>
+    		<div class="gameinfo">
+    			<div class="userphoto">
+    				<img src="./images/user_play.png" alt="">
+    			</div>
+    			<div class="userinfo">
+    				<p>頻道名稱</p>
+    				<p>實況主名字</p>
+    			</div>
+    		</div>
+    	</div>
+    	<div class="gamebox">
+    		<div class="gamevedio">
+    			<img src="./images/gamebase.jpg">
+    		</div>
+    		<div class="gameinfo">
+    			<div class="userphoto">
+    				<img src="./images/user_play.png" alt="">
+    			</div>
+    			<div class="userinfo">
+    				<p>頻道名稱</p>
+    				<p>實況主名字</p>
+    			</div>
+    		</div>
+    	</div>
+    	<div class="gamebox">
+    		<div class="gamevedio">
+    			<img src="./images/gamebase.jpg">
+    		</div>
+    		<div class="gameinfo">
+    			<div class="userphoto">
+    				<img src="./images/user_play.png" alt="">
+    			</div>
+    			<div class="userinfo">
+    				<p>頻道名稱</p>
+    				<p>實況主名字</p>
+    			</div>
+    		</div>
+    	</div>
+    	<div class="gamebox">
+    		<div class="gamevedio">
+    			<img src="./images/gamebase.jpg">
+    		</div>
+    		<div class="gameinfo">
+    			<div class="userphoto">
+    				<img src="./images/user_play.png" alt="">
+    			</div>
+    			<div class="userinfo">
+    				<p>頻道名稱</p>
+    				<p>實況主名字</p>
+    			</div>
+    		</div>
+    	</div>
+    </div>
   </body>
 </html>
