--- a/answers/hw1/index.html
+++ b/answers/hw1/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="style.css"></link>
+    <link rel="stylesheet" href="./style.css"></link>
   </head>
   <body>
   	<div class="cover">
